[package]
name = "kiryuu"
version = "0.3.0"
edition = "2021"
description = "A highly performant HTTP Bittorrent tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
serde_qs = "0.9.1"
redis = { version = "0.21.5", features = ["aio", "tokio-comp", "connection-manager"] }
rand = "*"
clap = { version = "4.0.30", features = ["derive"] }

[[example]]
name = "redis_zscore"
path = "examples/redis_zscore.rs"

[[example]]
name = "redis_zset"
path = "examples/redis_zset.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "url_enc_to_hex"
harness = false

[[bench]]
name = "make_redis_keys"
harness = false

[[bench]]
name = "ip_str_to_bytes"
harness = false
