[package]
name = "kiryuu"
version = "0.3.0"
edition = "2021"
description = "A highly performant HTTP Bittorrent tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-jemallocator = { version = "0.6", default-features = false }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_qs = "0.9.1"
redis = { version = "0.27.5", features = ["aio", "tokio-comp", "connection-manager"] }
rand = "*"
clap = { version = "4.0.30", features = ["derive"] }
opentelemetry = { version = "0.19", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-client", "reqwest-rustls"], optional = true }

[features]
tracing = ["dep:opentelemetry", "dep:opentelemetry-jaeger", "dep:opentelemetry-otlp"]

[[example]]
name = "redis_zscore"
path = "examples/redis_zscore.rs"

[[example]]
name = "redis_zset"
path = "examples/redis_zset.rs"

[dev-dependencies]
criterion = "0.4"
hex = "0.4.3"

[[bench]]
name = "url_enc_to_hex"
harness = false

[[bench]]
name = "make_redis_keys"
harness = false

[[bench]]
name = "ip_str_to_bytes"
harness = false
